# gemini-rogue

./: .gitignore  README.md  depth_report.html  depth_report.json  depth_report.md  desktop_report.html  desktop_report.json  desktop_report.md  gemini_rogue.py  index.html  pyproject.toml  report.json  report.md
pytest_tmp/: test_depth_summary_defaultcurrent  test_depth_summary_excludescurrent  test_depth_summary_htmlcurrent  test_depth_summary_jsoncurrent  test_depth_summary_markdowncurrent  test_depth_summary_max_invalidcurrent  test_depth_summary_maxcurrent  test_hash_duplicates_with_deptcurrent  test_html_graphs_contentcurrent  test_html_localizationcurrent  test_open_report_mockedcurrent  test_output_dir_defaultcurrent  test_output_dir_with_relative_current
pytest_tmp/test_depth_summary_json0/dir1/dir2/dir3/dir4/: file4.txt
pytest_tmp/test_hash_duplicates_with_dept0/dir1/: file1.txt
pytest_tmp/test_html_graphs_content0/reports_graphs/: test.html
pytest_tmp/test_html_localization0/dir1/dir2/: file2.txt
pytest_tmp/test_html_localization0/dir1/dir2/dir3/: file3.txt
pytest_tmp/test_output_dir_with_relative_0/reports_rel/: h.html  r.md
src/folder_archaeologist/: analyzer.py  cli.py  report.py  scanner.py
src/folder_archaeologist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_excludes.py  test_final.py  test_new_features.py  test_new_features_v2.py  test_report.py  test_scanner.py  test_validation.py
